--- a/task-3/index.html
+++ b/task-3/index.html
@@ -14,6 +14,6 @@
     <button id="jokeBtn">
         Dad Joke
     </button>
-<script src="./build" type="module"></script>
+<script src="./build/index.js" type="module"></script>
 </body>
 </html>
